# TalesRunnerUMManager

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  README_EN.md  README_KR.md  index.html  init.md  package-lock.json  package.json
docs/: MICROSOFT_STORE.md  STORE_LISTING.md
scripts/: build-msix.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/i18n/: en.json  index.ts  kr.json  zh_HK.json  zh_TW.json
src/lib/: tauriCommands.ts  types.ts
src/styles/: globals.css
