[package]
name = "tales-runner-umt-manager"
version = "0.1.0"
description = "Tales Runner UMT Map Manager"
authors = ["Porygon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1.3"
dirs = "5"
futures-util = "0.3"
regex = "1.11"
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
url = "2.5"
